Fix spacing & alignment on Filter & About sections

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -37,9 +37,10 @@
 }
 
 .filter__button {
+	height: 50px;
+	padding: 10px 0;
 	background: none;
 	text-align: center;
-	padding: 10px 0;
 	border: none;
 	border-radius: 6px;
 
