--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -29,7 +29,7 @@
 	}
 
 	&__content {
-		margin: 90px 0;
+		margin: 90px 0 50px 0;
 	}
 
 	&__title {
@@ -39,7 +39,7 @@
 	&__watch {
 		display: flex;
 		gap: 20px;
-		margin: 0 auto;
+		margin: 40px auto 0 auto;
 		align-items: center;
 		padding: 20px;
 		width: 50%;
