--- a/src/sass/layout/_filter.scss
+++ b/src/sass/layout/_filter.scss
@@ -2,24 +2,36 @@
 @import "../variables/breakpoints";
 
 .filter {
+	&__wrapper {
+		margin: 20px 0;
+	}
+
 	&__buttons {
-		background: colors.$white-blue;
-		box-shadow: 0px 21px 33px -10px rgb(37 126 129 / 16%);
-		border-radius: 6px;
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		gap: 20px;
 		padding: 20px;
+		background: colors.$white-blue;
+		box-shadow: 0px 21px 33px -10px rgb(37 126 129 / 16%);
+		border-radius: 6px;
 	}
 
 	&__images {
 		width: 300px;
 		display: grid;
 		row-gap: 15px;
-		margin: 0 auto;
+		margin: 0 auto 20px auto;
 
 		img {
 			width: 100%;
+
+			&:hover {
+				filter: drop-shadow(2px 4px 6px colors.$dark-blue);
+			}
 		}
+	}
+
+	.button--view-all {
+		margin: 0 auto;
 	}
 }
